--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="section-divider"></div>
             <h2>França</h2>
             <div class="image-container">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Flag_of_France_%281794%E2%80%931815%2C_1830%E2%80%931974%29.svg" alt="Bandeira da França">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg" alt="Bandeira da França">
             </div>
             <p>
                 A França, como uma das maiores economias da Europa e líder em vários campos tecnológicos, tem uma história rica e diversificada de inovação e desenvolvimento tecnológico.</p>
